Enhance index.html with meta description and structure
Added meta description for SEO and improved HTML structure.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Personalized diet plans for healthy food delivery">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>Easy Diets | Healthy Meals Delivered Daily</title>
     <link rel="stylesheet" href="style.css">
@@ -151,4 +152,5 @@
     });
 </script>
 </body>
+
 </html>
