--- a/luxury.html
+++ b/luxury.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Personalized diet plans for healthy living in hubbali.">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>Luxury Experience | Easy Diets</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -179,4 +180,5 @@
     });
 </script>
 </body>
+
 </html>
