--- a/premium.html
+++ b/premium.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Personalized diet plans for healthy living in Hubbali.">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>Premium Plan | Easy Diets</title>
     <link rel="stylesheet" href="style.css">
@@ -250,4 +251,5 @@
         });
     </script>
 </body>
+
 </html>
