--- a/index.html
+++ b/index.html
@@ -118,7 +118,30 @@
             </div>
             </div>
     </section>
-
+    <section id="bmi-calculator" class="section">
+    <h2 class="section-title">Check Your Health Status</h2>
+    <div class="bmi-container">
+        <div class="bmi-card">
+            <p>Calculate your Body Mass Index (BMI) to see if your weight is in a healthy range.</p>
+            <div class="input-group">
+                <label for="weight">Weight (kg)</label>
+                <input type="number" id="weight" placeholder="e.g. 70" step="0.1">
+            </div>
+            <div class="input-group">
+                <label for="height">Height (cm)</label>
+                <input type="number" id="height" placeholder="e.g. 175">
+            </div>
+            <button class="btn-primary" onclick="calculateBMI()" style="width: 100%; border: none; cursor: pointer;">Calculate BMI</button>
+            
+            <div id="bmi-result-box" class="bmi-result-box" style="display: none;">
+                <h4>Your BMI: <span id="bmi-value">0</span></h4>
+                <p id="bmi-category" class="bmi-status"></p>
+                <div id="bmi-advice" class="bmi-advice"></div>
+                <a href="#subscriptions" class="btn-secondary" style="display: inline-block; margin-top: 15px; background-color: green; color: white; text-decoration: none; padding: 10px 20px; border-radius: 5px;">View Your Personalized Plan</a>
+            </div>
+        </div>
+    </div>
+</section>
     <footer id="contact">
         <div class="footer-content">
             <div class="footer-info">
@@ -150,7 +173,50 @@
             navLinks.classList.remove('active');
         });
     });
+    function calculateBMI() {
+    const weight = document.getElementById('weight').value;
+    const height = document.getElementById('height').value / 100;
+
+    if (weight > 0 && height > 0) {
+        const bmi = (weight / (height * height)).toFixed(1);
+        const resultBox = document.getElementById('bmi-result-box');
+        const bmiValue = document.getElementById('bmi-value');
+        const bmiCategory = document.getElementById('bmi-category');
+        const bmiAdvice = document.getElementById('bmi-advice');
+
+        resultBox.style.display = 'block';
+        bmiValue.innerText = bmi;
+
+        // Reset class list each time
+        bmiCategory.className = "bmi-status";
+
+        let status = "";
+        let advice = "";
+
+        if (bmi < 18.5) {
+            status = "Underweight";
+            advice = "Fueling your body is an act of self-love. Our <strong>Luxury Kit</strong> provides the extra protein and essential nutrients needed to build a stronger, more resilient you.";
+        } else if (bmi >= 18.5 && bmi <= 24.9) {
+            status = "Normal Weight";
+            advice = "You're in the Gold Zone! Consistency is the secret to longevity. Let us handle the portion control and micro-nutrients with our <strong>Premium Kit</strong> so you stay at your peak performance.";
+        } else if (bmi >= 25 && bmi <= 29.9) {
+            status = "Overweight";
+            bmiCategory.classList.add("text-danger"); // Adds red color
+            advice = "Science shows that small, consistent changes in nutrition yield the biggest health dividends. Our <strong>Standard Kit</strong> helps regulate calorie intake without sacrificing flavor—the perfect step toward a lighter you.";
+        } else {
+            status = "Obese";
+            bmiCategory.classList.add("text-danger"); // Adds red color
+            advice = "Your health journey is a marathon, not a sprint. Proper nutrition is 80% of the battle. Start your transformation today with our calorie-counted meals designed to boost your metabolism naturally.";
+        }
+
+        bmiCategory.innerText = status;
+        bmiAdvice.innerHTML = advice;
+    } else {
+        alert("Please enter valid weight and height values.");
+    }
+}
 </script>
 </body>
 
 </html>
+
